fixed font size and header spacing on solutions page

--- a/wp-content/themes/intengo/sass/styles.scss
+++ b/wp-content/themes/intengo/sass/styles.scss
@@ -126,6 +126,10 @@
 				font-weight: bold;
 				text-transform: uppercase;
 			}
+			& > h4 {
+				font-size: 0.9em;
+				text-transform: uppercase;
+			}
 		}
 	}
 }
